<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditProfile"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Your Info"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="First Name" />

            <EditText
                android:id="@+id/et_pro_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/textinput_border"
                android:enabled="false"
                android:hint="Rupesh..." />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Last Name" />

            <EditText
                android:id="@+id/et_pro_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/textinput_border"
                android:enabled="false"
                android:hint="Dhakal..." />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Phone" />

            <EditText
                android:id="@+id/et_pro_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/textinput_border"
                android:hint="eg: 9999999999" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Username" />

            <EditText
                android:id="@+id/et_pro_uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/textinput_border"
                android:hint="eg: Dhakal55" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Email" />

            <EditText
                android:id="@+id/et_pro_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/textinput_border"
                android:hint="exmple@example.com" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Description" />

            <EditText
                android:id="@+id/et_pro_description"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="5dp"
                android:inputType="textMultiLine"
                android:background="@drawable/textinput_border"
                android:hint="something about you or a company" />

            <Button
                android:id="@+id/btn_pro_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/dark_button"
                android:text="Update"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>